add some questions.